<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_poster_description">Movie poster</string>
    <string name="label_main_activity">Pop Activity</string>
    <string name="label_movie_detail_activity">MovieDetail</string>
    <string name="error_icon">Error icon</string>
    <string name="error_loading_message">Error loading movie</string>
    <string name="synopsis_icon">description_synopsis_icon</string>
    <string name="rating_icon">Rating icon</string>
    <string name="release_date_icon">Release date icon</string>
    <string name="dummy_content_long_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum ullamcorper sapien, in vestibulum magna aliquet tristique. Mauris commodo vestibulum purus, in dapibus eros cursus quis. In ultricies, lacus in bibendum scelerisque, metus lorem facilisis sapien, vitae imperdiet sem sapien vel metus. Fusce erat elit, ultrices nec ultricies vel, aliquam eget dolor. Nam risus est, fringilla nec finibus eget, tristique ac sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque urna justo, efficitur id nulla at, interdum laoreet massa. Vivamus vitae nisi faucibus, euismod felis et, ultrices elit. Donec volutpat feugiat orci eu malesuada. Ut ornare ligula at lectus maximus, vitae hendrerit ex pretium. Suspendisse convallis eu enim eget imperdiet.</string>
    <string name="dummy_content_short_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="action_sort_by">Sort By</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_sort_by_title">Sort by</string>
    <string name="pref_sort_by_key" translatable="false">sort_by</string>

    <string name="pref_popular_label">Popular</string>
    <string name="pref_top_rated_label">Top Rated</string>

    <string name="pref_popular_value" translatable="false">popular</string>
    <string name="pref_top_rated_value" translatable="false">top_rated</string>

    <string name="pref_favourite_key" translatable="false">favourite</string>
    <string name="pref_favourite_title">Show Favourites</string>

    <string name="pref_favourite_off_summary">All Movies Shown</string>
    <string name="pref_favourite_on_summary">Only Favourites Shown</string>

    <string name="description_trailer_thumbnail">Trailer thumbnail</string>
    <string name="description_play_button">Play button</string>

    <string name="content_authority">com.shane.popularmovies</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_share">Share</string>

</resources>
