<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ListPreference
        android:key="@string/pref_sort_by_key"
        android:title="@string/pref_sort_by_title"
        android:entries="@array/pref_sort_by_labels"
        android:entryValues="@array/pref_sort_by_values"
        android:defaultValue="@string/pref_popular_value" />

    <SwitchPreferenceCompat
        android:title="@string/pref_favourite_title"
        android:key="@string/pref_favourite_key"
        android:summaryOn="@string/pref_favourite_on_summary"
        android:summaryOff="@string/pref_favourite_off_summary"
        android:defaultValue="@bool/pref_favourite_default_value"/>

</PreferenceScreen>